--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="Ground.js"></script>
 <script src="SlingShot.js"></script>
 <script src="matter.js"></script>
+<script src="Ball.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
